--- a/core/build.gradle
+++ b/core/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     api 'com.squareup.picasso:picasso:2.5.2'
 
     // Dependency Injection
-    api 'org.koin:koin-android:1.0.2'
+    api 'org.koin:koin-android:2.0.0'
 
     // Logging
     api 'com.jakewharton.timber:timber:4.7.1'
@@ -52,4 +52,5 @@ dependencies {
 
     // Testing
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.koin:koin-test:2.0.0'
 }
