--- a/core/build.gradle
+++ b/core/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     api 'com.google.android.material:material:1.1.0-alpha07'
 
     // Image Downloader
-    api 'com.squareup.picasso:picasso:2.5.2'
+    api 'com.github.bumptech.glide:glide:4.9.0'
 
     // Dependency Injection
     api 'org.koin:koin-android:2.0.0'
