--- a/core/build.gradle
+++ b/core/build.gradle
@@ -29,13 +29,18 @@ dependencies {
     // Kotlin
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     // Support Libraries & AndroidX
     api 'androidx.appcompat:appcompat:1.0.2'
     api 'androidx.core:core-ktx:1.0.2'
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
     api 'com.google.android.material:material:1.1.0-alpha07'
+    api "androidx.lifecycle:lifecycle-extensions:2.0.0"
+
+    // Navigation
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.navigation:navigation-fragment-ktx:2.0.0'
+    api 'androidx.navigation:navigation-ui-ktx:2.0.0'
 
     // Image Downloader
     api 'com.github.bumptech.glide:glide:4.9.0'
@@ -46,6 +51,7 @@ dependencies {
     // Network
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     // Testing
     testImplementation 'junit:junit:4.12'
