--- a/postlist/src/main/AndroidManifest.xml
+++ b/postlist/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.handler.postdetails"/>
+    package="de.handler.postlist"/>
